# qq-bot

./: .gitignore  main.py  pyproject.toml
modules/: minecraft.py
modules/Minecraft/: __init__.py  minecraft.py
